# pi_pico_c_template

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  prepare.sh
src/: main.c
